training simple docx

--- a/src/New_Test.ipynb
+++ b/src/New_Test.ipynb
@@ -1096,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 60,
    "id": "f675f54b-3852-4f61-8e80-aba87c909de5",
    "metadata": {},
    "outputs": [
@@ -1111,8 +1111,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 25bf7af] Initial commit with files and folders\n",
-      " 1 file changed, 189 insertions(+), 1 deletion(-)\n"
+      "[main 8bd2e79] Initial commit with files and folders\n",
+      " 1 file changed, 11 insertions(+), 4 deletions(-)\n"
      ]
     }
    ],
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 62,
    "id": "72604d7c-5e2b-4a10-8b35-b24c593c8113",
    "metadata": {},
    "outputs": [
@@ -1131,32 +1131,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "remote: error: GH013: Repository rule violations found for refs/heads/main.        \n",
-      "remote: \n",
-      "remote: - GITHUB PUSH PROTECTION        \n",
-      "remote:   â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”        \n",
-      "remote:     Resolve the following violations before pushing again        \n",
-      "remote: \n",
-      "remote:     - Push cannot contain secrets        \n",
-      "remote: \n",
-      "remote:             \n",
-      "remote:      (?) Learn how to resolve a blocked push        \n",
-      "remote:      https://docs.github.com/code-security/secret-scanning/working-with-secret-scanning-and-push-protection/working-with-push-protection-from-the-command-line#resolving-a-blocked-push        \n",
-      "remote:             \n",
-      "remote:             \n",
-      "remote:       â€”â€” OpenAI API Key â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”â€”        \n",
-      "remote:        locations:        \n",
-      "remote:          - commit: 4b8c1c7ea6f917af5b8cd305b7bc862c5323cbab        \n",
-      "remote:            path: src/New_Test.ipynb:536        \n",
-      "remote:             \n",
-      "remote:        (?) To push, remove secret from commit(s) or follow this URL to allow the secret.        \n",
-      "remote:        https://github.com/deadpool-kha/Python-Assignment/security/secret-scanning/unblock-secret/2v3tKY3Ph5T1cbYwD3zSqfPa0hO        \n",
-      "remote:             \n",
-      "remote: \n",
-      "remote: \n",
       "To https://github.com/deadpool-kha/Python-Assignment\n",
-      " ! [remote rejected] main -> main (push declined due to repository rule violations)\n",
-      "error: failed to push some refs to 'https://github.com/deadpool-kha/Python-Assignment'\n"
+      "   f56ff5e..8bd2e79  main -> main\n"
      ]
     }
    ],
