--- a/src/Untitled.ipynb
+++ b/src/Untitled.ipynb
@@ -215,8 +215,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "341f52a7-29d6-4784-8b10-ccc6faa05e17",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Match Score: 29.33 %\n",
+      "🧠 Common Keywords: ['aws', 'backend', 'cloud', 'developer', 'django', 'docker', 'experience', 'postgresql', 'python', 'redis']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "import string\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "\n",
+    "def clean_text(text):\n",
+    "    text = text.lower()\n",
+    "    text = re.sub(r'\\d+', '', text)\n",
+    "    text = text.translate(str.maketrans('', '', string.punctuation))\n",
+    "    text = text.strip()\n",
+    "    return text\n",
+    "\n",
+    "def compare_cv_to_job(cv_text, job_desc_text):\n",
+    "    cv_clean = clean_text(cv_text)\n",
+    "    job_clean = clean_text(job_desc_text)\n",
+    "\n",
+    "    vectorizer = TfidfVectorizer(stop_words='english')\n",
+    "    tfidf_matrix = vectorizer.fit_transform([cv_clean, job_clean])\n",
+    "\n",
+    "    similarity = cosine_similarity(tfidf_matrix[0:1], tfidf_matrix[1:2])[0][0]\n",
+    "\n",
+    "    feature_names = vectorizer.get_feature_names_out()\n",
+    "    cv_vector = tfidf_matrix[0].toarray()[0]\n",
+    "    job_vector = tfidf_matrix[1].toarray()[0]\n",
+    "\n",
+    "    common_keywords = [\n",
+    "        feature_names[i]\n",
+    "        for i in range(len(feature_names))\n",
+    "        if cv_vector[i] > 0 and job_vector[i] > 0\n",
+    "    ]\n",
+    "\n",
+    "    return {\n",
+    "        \"similarity_score\": round(similarity * 100, 2),\n",
+    "        \"common_keywords\": common_keywords\n",
+    "    }\n",
+    "\n",
+    "# ==== Example Data ====\n",
+    "cv_text = \"\"\"\n",
+    "John Doe\n",
+    "Python Developer\n",
+    "\n",
+    "Experience:\n",
+    "- Developed web applications using Django and Flask\n",
+    "- Integrated REST APIs and worked on cloud deployment (AWS, Heroku)\n",
+    "- Used PostgreSQL and Redis for backend data management\n",
+    "\n",
+    "Skills:\n",
+    "Python, Django, Flask, REST APIs, AWS, PostgreSQL, Git, Docker\n",
+    "\"\"\"\n",
+    "\n",
+    "job_desc = \"\"\"\n",
+    "We're looking for a Backend Developer with strong experience in:\n",
+    "- Python\n",
+    "- Django\n",
+    "- RESTful API development\n",
+    "- Cloud platforms (preferably AWS or Azure)\n",
+    "- PostgreSQL and Docker\n",
+    "\n",
+    "Bonus: experience with CI/CD pipelines and Redis.\n",
+    "\"\"\"\n",
+    "\n",
+    "# ==== Run Comparison ====\n",
+    "result = compare_cv_to_job(cv_text, job_desc)\n",
+    "print(\"✅ Match Score:\", result[\"similarity_score\"], \"%\")\n",
+    "print(\"🧠 Common Keywords:\", result[\"common_keywords\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9cb956e6-528b-4730-88d3-93fbb52dd56a",
    "metadata": {},
    "outputs": [],
    "source": []
