--- a/src/testing.ipynb
+++ b/src/testing.ipynb
@@ -266,8 +266,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "3ed208aa-fa60-497f-b007-87d9a3aeed32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#works good but has too many information"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6f226ba-129d-46ef-97c4-42366607fa6c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "88fe2a92-9a6a-45ab-b7b1-324644f7544f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3081662196.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[9], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    git add.\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "git add ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2bff0df-ec20-4870-9294-f8b31c36354a",
    "metadata": {},
    "outputs": [],
    "source": []
