--- a/src/testing.ipynb
+++ b/src/testing.ipynb
@@ -284,27 +284,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "88fe2a92-9a6a-45ab-b7b1-324644f7544f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3081662196.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[9], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    git add.\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: in the working copy of 'src/.ipynb_checkpoints/Train-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'src/.ipynb_checkpoints/testing-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'src/Train.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'src/Untitled.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'src/testing.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
      ]
     }
    ],
    "source": [
-    "git add ."
+    "!git add ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "c2bff0df-ec20-4870-9294-f8b31c36354a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main a2702f0] worked\n",
+      " 5 files changed, 756 insertions(+), 7 deletions(-)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git commit -m \"worked\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "c2c14f24-d75e-418a-bca1-89443e823219",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/deadpool-kha/Python-Assignment\n",
+      "   79b9a17..a2702f0  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git push origin main  \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2bff0df-ec20-4870-9294-f8b31c36354a",
+   "id": "741459b1-3b98-4d8c-9764-6bfacdc52b29",
    "metadata": {},
    "outputs": [],
    "source": []
